# gritql

./: .gitignore  Cargo.toml
.github/workflows/: code-quality.yaml  docs.yaml  main.yaml  napi.yaml  pr-lint.yaml  python-tests.yml  release-plz.yaml
crates/cli_bin/fixtures/match_filename/.grit/patterns/: rewrite_filename.md
crates/cli_bin/fixtures/windows_path_match/.grit/: grit.yaml
crates/cli_bin/fixtures/windows_path_match/.grit/patterns/: windows_path_match.md
crates/cli_bin/tests/: patterns_test.rs
crates/core/src/: api.rs  inline_snippets.rs  test.rs
crates/grit-pattern-matcher/: CHANGELOG.md
crates/grit-util/: CHANGELOG.md
crates/language/src/: language.rs  python.rs
docs/: next.config.js
docs/src/app/(doclike)/(default)/playground/: page.tsx
docs/src/app/(fullwidth)/playground/: page.tsx
docs/src/components/code-block/: cli.tsx  diff-editor.tsx  editor.tsx  monaco.tsx
docs/src/components/editor/: analyzer-context.tsx  config.ts  context.tsx  highlights.ts  monaco-diff-editor.tsx  monaco-editor.tsx  standalone-editor.tsx  wasm-provider.tsx
docs/src/components/patterns/: buttons.tsx  list.tsx
docs/src/hooks/: use-diff-editor.ts
docs/src/pages/: discord.mdoc
docs/src/statics/: project.ts
docs/src/templates/: plain.tsx
docs/src/universal/matching/: types.ts
docs/src/universal/patterns/: types.ts
docs/src/workers/: provider.tsx
python/: pyproject.toml
python/tests/: test_installer.py  test_run.py
